<resources>
    <string name="app_name">Ticket To Ride: Game of Thrones Edition</string>
    <string name="discard_dest">Discard or Click Twice to End Turn</string>
    <string name="draw_dest">Draw Destination Cards</string>
    <string name="train_cards">Train Cards</string>
    <string name="dest_cards">Destination Cards</string>
    <string name="chat_title">Chat</string>
    <string name="history_title">Game History</string>
    <string name="stats_title">Stats</string>
    <string name="return_to_game">Return to Game</string>
    <string name="player_title">Player</string>
    <string name="points_title">Points</string>
    <string name="num_trains_title"># Trains</string>
    <string name="num_cards_title"># Cards \n Train/Dest</string>
    <string name="num_routes_title">#Routes</string>
    <string name="zero">0</string>
    <string name="game_chat_button">Game Chat</string>
    <string name="title">Ticket to Ride:\nGame of Thrones</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="switch_login">Already registered? Click here to login</string>
    <string name="switch_register">New User? Click here to register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="vacant">vacant</string>
    <string name="create_game_button">Create Game</string>
    <string name="start_game_button">Start Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="games_list">Games:</string>
    <string name="player_list">Players:</string>
    <string name="current_game">Current Game:</string>
    <string name="game_name">Game Name:</string>
    <string name="done">Done</string>
    <string name="claim_route_button">Claim Route</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>

    <string-array name="card_colors">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>black</item>
        <item>white</item>
    </string-array>

    <string-array name="card_numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
