<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobby_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/got"
    android:columnCount="2">


    <LinearLayout
        android:background="@drawable/scroll"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        tools:targetApi="ice_cream_sandwich"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textStyle="normal|bold"/>

            <TextView
                android:id="@+id/yourName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textAlignment="textStart"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gameLabel"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/current_game"
                android:textStyle="normal|bold"/>

            <TextView
                android:id="@+id/curGame"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop ="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lists_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:orientation="vertical"
                tools:ignore="GridLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:text="@string/games_list"
                    android:id="@+id/gList"
                    android:textStyle="bold"/>

                <android.support.v7.widget.RecyclerView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/game_list"
                    android:layout_marginStart="45dp"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/player_list">

                <TextView
                    android:id="@+id/list_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_list"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacant" />

                <TextView
                    android:id="@+id/p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacant" />

                <TextView
                    android:id="@+id/p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacant" />

                <TextView
                    android:id="@+id/p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacant" />

                <TextView
                    android:id="@+id/p5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vacant" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_marginStart="45dp"
            android:id="@+id/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_game_button"
            android:backgroundTint="#A52A2A"/>


        <Button
            android:layout_marginStart="45dp"
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_button"
            android:backgroundTint="#A52A2A"/>

        <Button
            android:layout_marginStart="45dp"
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_game_button"
            android:backgroundTint="#A52A2A"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="45dp"
            android:id="@+id/newGame"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gName"
                android:inputType="text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/done"
                android:backgroundTint="#A52A2A"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>

