<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RegisterLogin.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/scroll"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="105dp">
            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:id="@+id/textView"
                tools:text="Username" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="FINN"
                android:ems="10"
                android:id="@+id/editText_username1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp">
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="40dp"
                android:id="@+id/textView3"
                tools:text="Password" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2_password1"
                android:layout_weight="1"
                android:text="FINES" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp">
            <TextView
                android:text="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="40dp"
                android:id="@+id/textView4"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2_passwordconf1"
                android:layout_weight="1"
                android:text="FINES" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:layout_height="67dp">

            <Button
                android:id="@+id/button2_register1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:text="@string/register_button"
                android:backgroundTint="#A52A2A"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/switch_login" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textAlignment="center"/>
</FrameLayout>