<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background = "@drawable/got">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/scroll"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginTop="60dp">

                <TextView
                    android:text="@string/dest_cards"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_height="match_parent"
                    android:id="@+id/cardViewName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/destCardsLayout">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:background="@drawable/rainbow"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/cardViewCard2"
                    android:orientation="vertical"
                    android:layout_height="100dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/cardViewCard2StartCity"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard2EndCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard2Points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:layout_height="100dp"
                    android:background="@drawable/rainbow"
                    android:id="@+id/cardViewCard3"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/cardViewCard3StartCity"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:layout_marginTop="7dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard3EndCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard3Points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:background="@drawable/rainbow"
                    android:id="@+id/cardViewCard4"
                    android:orientation="vertical"
                    android:layout_width="55dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/cardViewCard4StartCity"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:layout_marginTop="7dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard4EndCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/cardViewCard4Points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/cardViewDCardToDeck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/discard_dest"
                        android:backgroundTint="#A52A2A"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/cardViewDrawDests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/draw_dest"
                        android:backgroundTint="#A52A2A"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="398dp"
                    android:layout_height="67dp"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/cardViewToGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Return to Game"
                        android:backgroundTint="#A52A2A"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>


                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

</FrameLayout>

